<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radioSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioRuns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_runs" />

            <RadioButton
                android:id="@+id/radioWickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_wickets" />

            <RadioButton
                android:id="@+id/radio4s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_4s" />
            <RadioButton
                android:id="@+id/radio6s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_6s" />


        </RadioGroup>

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:background="@color/colorPrimaryTheme"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/btn_filter" />

    </LinearLayout>
